Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12998

Query History fails DCHECK with unknown DDL type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.4.0
    • Impala 4.4.0
    • Backend
    • None

    Description

      When running Impala's full test suite with enable_workload_mgmt, Impala errors out with

      W0409 17:28:36.151866 14947 workload-management.cc:244] unknown ddl type: SHOW_METADATA_TABLES
      F0409 17:28:36.151877 14947 workload-management.cc:246] Check failed: false 
      

      It doesn't handle SHOW_METADATA_TABLES from IMPALA-12609.

      Attachments

        Issue Links

          Activity

            People

              MikaelSmith Michael Smith
              MikaelSmith Michael Smith
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: