IMPALA-12998: Add SHOW_METADATA_TABLES to ignored DDL

Adds SHOW_METADATA_TABLES to the list of ignored DDL in workload
management. Fixes DCHECK failure when running Impala's full test suite
with 'enable_workload_mgmt'.

Change-Id: I69f7de9756aa730d70cd9187c9f869d5bcf67fce
Reviewed-on: http://gerrit.cloudera.org:8080/21290
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>